# embassy-defmt-usb

./: .gitignore  Cargo.toml  README.md
src/: global_logger.rs  lib.rs
